<resources>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_name">LMES</string>
    <string name="type_email">Mobile Number/Email Address</string>
    <string name="type_password">Password</string>
    <string name="watch_stream">Watch Stream</string>
    <string name="sign_text">Please Sign up for monitoring</string>
    <string name="splash_text">LABORATORY MONITORING AND EVALUATION SYSTEM</string>
    <string name="welcome">Welcome back</string>
    <string name="login_please">Please put your login credentials below to start using the app</string>
    <string name="signup_please">Please put your Sign Up credentials below to start using the app</string>
    <string name="dont_account">Don\'t have any account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_account">Already have a Account?</string>
    <string name="type_password_2">Confirm your password</string>
    <string name="pass_no_match">Please Provide Same Password</string>
    <string name="verify_text">Waiting for user verification.</string>
    <string name="web_portal">Web Portal</string>
    <string name="user_manual">User Manual</string>
    <string name="welcome_note">Welcome Note</string>
    <string name="request_access">Request Access</string>
    <string name="fill_up">Please Fill up the form with correct information\n <color name="red">*</color> Required</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="designation">Designation</string>
    <string name="about">About</string>
    <string name="your_msg">Your Message</string>
    <string name="upload_institute_image">Upload Institute Image</string>
    <string name="check_info">All information is Checked Correct.</string>
    <string name="submit">Submit</string>
    <string name="grant_access">Grant Access</string>
    <string name="request_list">List Of All Users Requesting for Access</string>
    <string name="number">Phone Number</string>
    <string name="Sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="verify_user">Verify the user from given information</string>
    <string name="access_level">Access Level</string>
    <string name="district">District</string>
    <string name="sub_district">Upozilla</string>
    <string name="message">Message</string>
    <string name="lmes">LMES</string>
    <string name="live_stream">Live Stream</string>
    <string name="notice">Notice</string>
    <string name="weekly_update">Weekly Update</string>
    <string name="log_out">Log Out</string>
    <string name="please_fill">Please fill up the form below with correct information</string>
    <string name="title">A dedicated application for effective supervision of academic institution to ensure quality education</string>
    <string name="heading">Welcome To \n Laboratory Monitoring And \n Evaluation System</string>

    <string-array name="access">
        <item>DC</item>
        <item>UNO</item>
        <item>HEADMASTER</item>
    </string-array>
</resources>