<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="5dp"
    tools:context=".LayerAuthentication"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/authMessage"
        android:layout_margin="5dp"
        android:gravity="center"
        android:textColor="@color/red"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="304dp"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_image"
        android:visibility="gone"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/welcome_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_signup_0"
        android:text="@string/welcome_note"
        android:layout_margin="5dp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/web_portal"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:text="@string/web_portal"
        android:background="@drawable/ic_signup_0"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/user_manual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_manual"
        android:layout_margin="5dp"
        android:background="@drawable/ic_signup_0"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/verify_text"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/request_access"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:background="@drawable/ic_button"
        android:text="@string/request_access"
        android:textAllCaps="false"
        android:layout_margin="5dp"
        android:textColor="@color/white"
        android:textSize="24dp" />
<!--    <Button-->
<!--        android:id="@+id/request_access"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textColor="@color/white"-->
<!--        android:background="@drawable/ic_button"-->
<!--        android:text="@string/request_access"-->
<!--        />-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/request_signOut"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="22dp"
        android:layout_margin="5dp"
        android:layout_marginRight="22dp"
        android:background="@drawable/ic_button"
        android:text="@string/Sign_out"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24dp" />
<!--    <Button-->
<!--        android:id="@+id/request_signOut"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textColor="@color/white"-->
<!--        android:background="@drawable/ic_button"-->
<!--        android:text="@string/Sign_out"-->
<!--        />-->

</LinearLayout>


